// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`renders the component as active 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton EditorToolbarButton--is-active IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`renders the component as disabled 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton IconButton--secondary IconButton--disabled IconButton--deprecated Button--muted Button--disabled Button--trimmed"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    disabled=""
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`renders the component with a tooltip 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton my-extra-class IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`renders with a dropdown indicator 1`] = `
<span>
  <button
    aria-label="H1"
    class="Button IconButton EditorToolbarButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed Button--is-dropdown"
    data-test-id="cf-ui-button"
    data-testid="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <svg
        class="Icon Icon--small Icon--secondary Button__dropdown-icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
        />
        <path
          d="M0-.75h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</span>
`;
